# EduRL

./: README.md  __init__.py  app.py  client.py  inference.py  models.py  openenv.yaml  pyproject.toml
server/: Dockerfile  __init__.py  app.py  personalized_learning_path_environment.py  requirements.txt  tasks.py
